unpackaged/main/default/objects/maps__LiveDailyDriveTrip__c/fields/maps__BeginTripCity__c.field-meta.xml
<CustomField>
    <fullName>maps__BeginTripCity__c</fullName>
    <description>City where the start of the trip took place</description>
    <formula>maps__BeginTripStop__r.maps__City__c</formula>
    <inlineHelpText>Ville où le trajet a démarré</inlineHelpText>
    <label>Begin Trip City</label>
    <type>Text</type>
</CustomField>