unpackaged/main/default/objects/maps__LiveDailyDriveTrip__c/fields/maps__BeginTripFullAddress__c.field-meta.xml
<CustomField>
    <fullName>maps__BeginTripFullAddress__c</fullName>
    <description>Address where the start of the trip took place</description>
    <inlineHelpText>Adresse à laquelle le trajet a démarré</inlineHelpText>
    <label>Begin Trip Full Address</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>