unpackaged/main/default/objects/maps__LiveDailyDriveTrip__c/fields/maps__BeginTripPostalCode__c.field-meta.xml
<CustomField>
    <fullName>maps__BeginTripPostalCode__c</fullName>
    <description>Postal Code where the start of the trip took place</description>
    <formula>maps__BeginTripStop__r.maps__PostalCode__c</formula>
    <inlineHelpText>Code postal auquel le trajet a démarré</inlineHelpText>
    <label>Begin Trip Postal Code</label>
    <type>Text</type>
</CustomField>