unpackaged/main/default/objects/maps__LiveDailyDriveTrip__c/fields/maps__BeginTripStop__c.field-meta.xml
<CustomField>
    <fullName>maps__BeginTripStop__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the Event Record, which is the start of this trip</description>
    <inlineHelpText>Référence à l&#39;enregistrement de l&#39;événement, qui est le départ de ce trajet</inlineHelpText>
    <label>Begin Trip Stop</label>
    <referenceTo>maps__LiveAssetDailySummaryEvent__c</referenceTo>
    <relationshipName>BeginTripStops</relationshipName>
    <type>Lookup</type>
</CustomField>