unpackaged/main/default/objects/maps__LiveDailyDriveTrip__c/fields/maps__Date__c.field-meta.xml
<CustomField>
    <fullName>maps__Date__c</fullName>
    <description>Date of the Trip</description>
    <inlineHelpText>Date du trajet</inlineHelpText>
    <label>Date</label>
    <type>Date</type>
</CustomField>