unpackaged/main/default/objects/maps__LiveDailyDriveTrip__c/fields/maps__DrivingDuringHoliday__c.field-meta.xml
<CustomField>
    <fullName>maps__DrivingDuringHoliday__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indication if trip took place within denoted holiday off</description>
    <inlineHelpText>Indique si le trajet a été effectué pendant les congés désignés</inlineHelpText>
    <label>Driving During Holiday</label>
    <type>Checkbox</type>
</CustomField>