unpackaged/main/default/objects/maps__LiveDailyDriveTrip__c/fields/maps__EndTripCity__c.field-meta.xml
<CustomField>
    <fullName>maps__EndTripCity__c</fullName>
    <description>City where the end of the trip took place</description>
    <formula>maps__EndTripStop__r.maps__City__c</formula>
    <inlineHelpText>Ville où le trajet s&#39;est terminé</inlineHelpText>
    <label>End Trip City</label>
    <type>Text</type>
</CustomField>