unpackaged/main/default/objects/maps__LiveDailyDriveTrip__c/fields/maps__EndTripCountry__c.field-meta.xml
<CustomField>
    <fullName>maps__EndTripCountry__c</fullName>
    <description>Country where the end of the trip took place</description>
    <formula>maps__EndTripStop__r.maps__Country__c</formula>
    <inlineHelpText>Pays où le trajet s&#39;est terminé</inlineHelpText>
    <label>End Trip Country</label>
    <type>Text</type>
</CustomField>