unpackaged/main/default/objects/maps__LiveDailyDriveTrip__c/fields/maps__EndTripPostalCode__c.field-meta.xml
<CustomField>
    <fullName>maps__EndTripPostalCode__c</fullName>
    <description>Postal Code where the end of the trip took place</description>
    <formula>maps__EndTripStop__r.maps__PostalCode__c</formula>
    <inlineHelpText>Code postal auquel le trajet s&#39;est terminé</inlineHelpText>
    <label>End Trip Postal Code</label>
    <type>Text</type>
</CustomField>