unpackaged/main/default/objects/maps__LiveDailyDriveTrip__c/fields/maps__EndTripState__c.field-meta.xml
<CustomField>
    <fullName>maps__EndTripState__c</fullName>
    <description>State where the end of the trip took place</description>
    <formula>maps__EndTripStop__r.maps__State__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>État, région ou province où le trajet s&#39;est terminé</inlineHelpText>
    <label>End Trip State</label>
    <type>Text</type>
</CustomField>