unpackaged/main/default/objects/maps__LiveDailyDriveTrip__c/fields/maps__LiveAssetDailySummary__c.field-meta.xml
<CustomField>
    <fullName>maps__LiveAssetDailySummary__c</fullName>
    <description>Live Asset Daily Summary record to which this mileage relates</description>
    <inlineHelpText>Enregistrement Résumé quotidien d&#39;actif live auquel ce kilométrage est associé</inlineHelpText>
    <label>Live Asset Daily Summary</label>
    <referenceTo>maps__LiveAssetDailySummary__c</referenceTo>
    <relationshipLabel>Live Summary Drive Trips</relationshipLabel>
    <relationshipName>LiveDailyTrips</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>