unpackaged/main/default/objects/maps__LiveDailyDriveTrip__c/fields/maps__TotalNumOfHardAccelEventsInTrip__c.field-meta.xml
<CustomField>
    <fullName>maps__TotalNumOfHardAccelEventsInTrip__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Total # of Hard Accel Events In Trip</description>
    <inlineHelpText>Nombre total d&#39;événements Accélération brutale pendant ce trajet</inlineHelpText>
    <label>Total # of Hard Accel Events In Trip</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>